[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/columns/groundv2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/columns/background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Towers.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/columns/nuvem1.1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/columns/nuvem2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/ui/reuturn_round.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Sprites/fachada/Asset 5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/fachada/c√≠rculo.png" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/Font2.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Sprites/ui/relogio.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 264, 160 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 6520, -8 )
b = Vector2( -4096, 0 )

[sub_resource type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="Towers" type="StaticBody2D" groups=[
"ground",
]]
position = Vector2( 0, -1 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 952, 544 )
z_index = 1
current = true

[node name="score" type="Label" parent="Camera2D"]
visible = false
margin_left = -184.0
margin_top = -360.0
margin_right = 160.0
margin_bottom = -232.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line1" type="Sprite" parent="Camera2D"]
position = Vector2( 334, -800 )
scale = Vector2( 1.104, 1.104 )
texture = ExtResource( 9 )
offset = Vector2( -1016.32, 406.528 )

[node name="line2" type="Sprite" parent="Camera2D"]
position = Vector2( 473, -799 )
scale = Vector2( 1.104, 1.104 )
texture = ExtResource( 9 )
offset = Vector2( -1016.32, 406.528 )

[node name="line3" type="Sprite" parent="Camera2D"]
position = Vector2( 616, -801 )
scale = Vector2( 1.104, 1.104 )
texture = ExtResource( 9 )
offset = Vector2( -1016.32, 406.528 )

[node name="coluna1" type="Sprite" parent="Camera2D"]
position = Vector2( -788, -350 )
scale = Vector2( 1.1039, 1.1039 )
texture = ExtResource( 8 )

[node name="coluna2" type="Sprite" parent="Camera2D"]
position = Vector2( -649, -350 )
scale = Vector2( 1.104, 1.104 )
texture = ExtResource( 8 )

[node name="coluna3" type="Sprite" parent="Camera2D"]
position = Vector2( -506, -352 )
scale = Vector2( 1.104, 1.104 )
texture = ExtResource( 8 )

[node name="relogio" type="Sprite" parent="Camera2D"]
position = Vector2( -782.246, -152.516 )
scale = Vector2( 1.12743, 1.12743 )
texture = ExtResource( 11 )

[node name="seconds" type="Label" parent="Camera2D"]
margin_left = -706.0
margin_top = -228.0
margin_right = -322.0
margin_bottom = -75.9996
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "455"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Camera2D"]
position = Vector2( 0, 8.00003 )
scale = Vector2( 0.488281, 0.527778 )
z_index = -1
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton" type="TextureButton" parent="Camera2D"]
margin_left = -837.0
margin_top = -21.0
margin_right = -714.0
margin_bottom = 99.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 962.881, 920 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -8, 1072 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 1864, -1504 )
scale = Vector2( 0.603896, 0.603896 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 863.391 )
scale = Vector2( 0.462159, 0.413305 )
z_index = 5
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 600, -2528 )
scale = Vector2( 0.589844, 0.41342 )
texture = ExtResource( 5 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 1032, -3632 )
scale = Vector2( 0.552734, 0.62749 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( -136, -416 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 1936, -4528 )
scale = Vector2( 0.658203, 0.491342 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Camera2D/TextureButton" to="." method="_on_TextureButton_pressed"]
